--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://mctr.github.com
 title: Mesut Çittir(mctr)
-subtitle: A blogging framework for hackers.
+subtitle: mctr@mesut:~$ 
 author: mctr
 simple_search: http://google.com/search
 description:
